# VehicleManagementSystem

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  FEATURES.md  README.md  cmake_uninstall.cmake.in  flake.nix  mingw-toolchain.cmake  package_project.sh  setup_docker.sh
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/codespaces/: devcontainer.json
.devcontainer/desktop/: devcontainer.json
.github/workflows/: ci.yml  nix-cache.yml  release.yml  stress.yml
include/: AppPaths.h  EscPosPrinter.h  Exceptions.h  FileStorage.h  FleetMgmt.h  IPrinter.h  IStorage.h  Logger.h  PluginRegistry.h  PrinterRegistry.h  StorageRegistry.h  Types.h  UI.h  Vehicle.h
include/ui/: AdvancedFilterModal.h  LoadingOverlay.h  LogsModal.h  QuickReturnModal.h  RegisterVehicleModal.h  RentVehicleModal.h  StatusChangeModal.h  UIHelpers.h
libs/: setup_mingw_deps.sh
src/: AppPaths.cpp  CMakeLists.txt  EscPosPrinter.cpp  FileStorage.cpp  FleetMgmt.cpp  Logger.cpp  UI.cpp  Vehicle.cpp  demo_notui.cpp  main.cpp
src/plugins/: CustomPrinter.cpp
src/ui/: AdvancedFilterModal.cpp  LoadingOverlay.cpp  LogsModal.cpp  QuickReturnModal.cpp  RegisterVehicleModal.cpp  RentVehicleModal.cpp  StatusChangeModal.cpp
tests/: MockSystem.h  test_codegen.cpp  test_concurrency.cpp  test_filestorage.cpp  test_fleet.cpp  test_notui.cpp  test_storage_failures.cpp  test_time_anomalies.cpp  test_validation.cpp  test_vehicle.cpp
